<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PastExplorerActivity!</string>
    <string name="app_name">PastExplorer</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="signin">Sign in</string>
    <string name="signInFailed">Invalid username or password.\nPlease try again.</string>
    <string name="signInEmptyUsername">Please enter your username</string>
    <string name="signInEmptyPassword">Please enter your password</string>
    <string name="confirmSignOutTitle">Sign out</string>
    <string name="confirmSignOutMessage">Are you sure you want to sign out?</string>
    <string name="dashboardNoAlbums">No albums</string>
    <string name="pleaseWait">Please wait</string>
    <string name="retrievingAlbums">Retrieving albums &#8230;</string>
    <string name="retrievingPhotos">Retrieving photos &#8230;</string>
    <string name="albumItemViews">Views: </string>
    <string name="albumItemRating">Rating: </string>
    <string name="albumItemPhotos">photos</string>
    <string name="albumThumbnailDesc">album thumbnail</string>
    <string name="add_photo">Add photo</string>
    <string name="take_photo">Take photo!</string>
    <string name="retake_photo">Retake photo</string>
    <string name="upload_ok">Upload successful</string>
    <string name="upload_error">Upload error</string>
    <string name="upload_ok_msg">Photo has been uploaded successfully!</string>
    <string name="dashboard_header">Your albums</string>
    <string name="signing_in">Signing in &#8230;</string>

</resources>